unpackaged/main/default/objects/Course_Interest__c/Course_Interest__c.object-meta.xml
<CustomObject>
    <label>Course Interest</label>
    <nameField>
        <displayFormat>Interest-{00000000}</displayFormat>
        <label>Course Interest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>