unpackaged/main/default/objects/Course_Interest__c/fields/Enrollment_Record__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Record__c</fullName>
    <label>Enrollment Record</label>
    <referenceTo>Enrollment_Record__c</referenceTo>
    <relationshipLabel>Course Interests</relationshipLabel>
    <relationshipName>Course_Interests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>