unpackaged/main/default/objects/Course_Interest__c/fields/Preference_Rank__c.field-meta.xml
<CustomField>
    <fullName>Preference_Rank__c</fullName>
    <description>The preference of choice for this course by the student. Lower numbers indicate a higher preference.</description>
    <inlineHelpText>The preference of choice for this course by the student. Lower numbers indicate a higher preference.</inlineHelpText>
    <label>Preference Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>